fix spacings

--- a/modules/mod_emundus_campaign/css/mod_emundus_campaign_tchooz.css
+++ b/modules/mod_emundus_campaign/css/mod_emundus_campaign_tchooz.css
@@ -26,6 +26,10 @@
     width: 72%;
 }
 
+.mod_emundus_campaign__list_items .pagination {
+    margin: 0;
+}
+
 .mod_emundus_campaign__intro *{
   font-family: var(--em-applicant-font);
 }
