--- a/templates/g5_helium/custom/scss/tchooz.scss
+++ b/templates/g5_helium/custom/scss/tchooz.scss
@@ -2073,11 +2073,6 @@ button.em-swal-delete-button:hover{
   color: var(--neutral-600) !important;
 }
 
-/* Augmentation des marges */
-.view-featured .mod_emundus_campaign__content .em-mb-24 {
-  margin-top: 40px;
-}
-
 /*******************
  *    Peps liste   *
  *******************/
